
$Id$

2012-06-02 Karl Lehenbauer
    * Add new -withoutnulls option to pg_select, if set will remove null 
      fields from the row result array.

2012-06-02 Karl Lehenbauer
    * Add new pg_dbinfo options "dbname", "user", "pass", "host", "port",
      "options", "status", "transaction_status", "error_message",
      "needs_password", "used_password", "used_ssl" to provide Tcl access
      to libpq connection parameter values established at connection time.

    * Fixed bug where pg_dbinfo would get a segmentation violation if passed
      an invalid connection handle.

    * Version bump to 1.9.

2011-02-15 Karl Lehenbauer
    * Removed arrVar variable and setting of it in Pg_result because it
      didn't do anything.

2010-07-01 Brett Schwarz
    * Added result callback for async queries via pg_sql. Based on code from Miguel Sofer. I
      had this code laying around and thought I had already committed, but turned out no.

2010-04-14 Karl Lehenbauer
    * Added new option to pg_dbinfo, "sql_count", returns the number of calls
      to pg_exec, pg_exec_prepared, pg_sendquery, pg_sendquery_prepared,
      and pg_select since the database connection was established.

    * Fixed a bug in dbinfo where a missing database connection argument
      could result in a coredump.

    * Version bump to 1.8.

2010-04-12 Brett Schwarz
    * Added Tcl 8.6 compatability by gettting rid of errorLine direct struct
      access and using Tcl_GetErrorLine, introduced in 8.6. Also added define
      for Tcl versions less than 8.6 so they can use the Tcl_GetErrorLine call.
      I ripped this off from the aolserver fix :)

2009-09-16 Karl Lehenbauer
    * Add gen_update_from_array and perform_update_from_array to Postgres
      helper package.

2009-07-07 Karl Lehenbauer
    * pg_select was not checking returns from Tcl_ObjSetVar2 and friends.
      The problem was that if the pg_select array already existed as a